added the focus page

--- a/app/code/public/index.html
+++ b/app/code/public/index.html
@@ -9,8 +9,21 @@
   <meta name="website description" content="my porfolio to mark my online presence" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <style>
+    .fav-icon {
+      border: 3px solid red;
+      border-radius: 50px;
+    }
+  </style>
+  
+  <link rel="icon"  class="fav-icon" type="image/jpg" href="./selfie 2.jpg" />
+
   <title>Code Debug</title>
   <style>
+    .fav-icon {
+      border: 3px solid red;
+      border-radius: 50px;
+    }
 
     .site-icon {
       width: 200px;
