changed the intro text

--- a/app/code/public/index.html
+++ b/app/code/public/index.html
@@ -9,6 +9,10 @@
   <meta name="website description" content="my porfolio to mark my online presence" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&,900display=swap" rel="stylesheet">
+
   <style>
     .fav-icon {
       border: 3px solid red;
