worked with the AppBar

--- a/app/code/public/index.html
+++ b/app/code/public/index.html
@@ -37,15 +37,17 @@
     }
     * {
       scroll-behavior: smooth;
-
-    }
-
-     body {
-
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
+
+    
+
+     body {
+       background-color: crimson;
+    }
+
 
     body::-webkit-scrollbar {
       display: none;
